--- a/interview_html/dev/index.html
+++ b/interview_html/dev/index.html
@@ -8,7 +8,7 @@
     <meta name="format-detection" content="telephone=no" />
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <title>Demo</title>
+    <title>FPG Interview</title>
 
     <!-- inject:css -->
     <link rel="stylesheet" href="style/style.css">
@@ -18,30 +18,7 @@
 <body>
     <!-- content start -->
     <div class="content-middle">
-        <div class="obiWan preload" data-source="{{root}}image/Old_Obi_Wan_128px_1082920_easyicon.net.svg">
-            <div class="talkbubble">
-                <div class="words"></div>
-            </div>
-        </div>
-        <div class="door-wrapper">
-            <div class="door-list">
-                <div class="door-item">
-                    <div class="arrow-down preload" data-source="{{root}}image/Arrow_big_down_1197958_easyicon.net.svg"></div>
-                    <div class="cross-red preload" data-source="{{root}}image/cross_1187636_easyicon.net.svg"></div>
-                    <div class="door preload" data-source="{{root}}image/door.svg"></div>
-                </div>
-                <div class="door-item">
-                    <div class="arrow-down preload" data-source="{{root}}image/Arrow_big_down_1197958_easyicon.net.svg"></div>
-                    <div class="cross-red preload" data-source="{{root}}image/cross_1187636_easyicon.net.svg"></div>
-                    <div class="door preload" data-source="{{root}}image/door.svg"></div>
-                </div>
-                <div class="door-item">
-                    <div class="arrow-down preload" data-source="{{root}}image/Arrow_big_down_1197958_easyicon.net.svg"></div>
-                    <div class="cross-red preload" data-source="{{root}}image/cross_1187636_easyicon.net.svg"></div>
-                    <div class="door preload" data-source="{{root}}image/door.svg"></div>
-                </div>
-            </div>
-        </div>
+        {% include "./partial/frame1.swig" %}
     </div>
 
     <!-- content end -->
