fix unable to scroll

--- a/interview_html/dev/index.html
+++ b/interview_html/dev/index.html
@@ -19,7 +19,7 @@
         <!-- content start -->
         {% include "./partial/openFrame.swig" %}
 
-        <div class="content-middle frame-list">
+        <div class="content-middle frame-list" id="xx">
             {# {% include "./partial/frame1.swig" %} #}
         </div>
 
