--- a/interview_html/dev/index.html
+++ b/interview_html/dev/index.html
@@ -19,8 +19,8 @@
         <!-- content start -->
         {% include "./partial/openFrame.swig" %}
 
-        <div class="content-middle frame-list" id="xx">
-            {# {% include "./partial/frame1.swig" %} #}
+        <div class="content-middle frame-list">
+            <div class="frame-intro-list"></div>
         </div>
 
         <!-- content end -->
