1018 add question animation

--- a/interview_html/dev/index.html
+++ b/interview_html/dev/index.html
@@ -21,6 +21,7 @@
 
         <div class="content-middle frame-list">
             <div class="frame-intro-list"></div>
+            <div class="frame-game-list"></div>
         </div>
 
         <!-- content end -->
