1019 finish most UI

--- a/interview_html/dev/index.html
+++ b/interview_html/dev/index.html
@@ -22,6 +22,11 @@
         <div class="content-middle frame-list">
             <div class="frame-intro-list"></div>
             <div class="frame-game-list"></div>
+            <div class="loading">
+                <div class="loading-circle-wrapper">
+                    <div class="loading-circle"></div>
+                </div>
+            </div>
         </div>
 
         <!-- content end -->
