1027 local version almost finish

--- a/interview_html/dev/index.html
+++ b/interview_html/dev/index.html
@@ -29,6 +29,8 @@
             </div>
         </div>
 
+        {% include "./partial/evaluationFrame.swig" %} 
+
         <!-- content end -->
 
         {% include "./partial/tip.swig" %}
